# liara-interfaces

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  INTERFACES.md  README.md  vcpkg.json
.github/workflows/: docs.yml
cmake/: LiaraInterfacesConfig.cmake.in
dev/html/: README_8md.html  design-tokens.css  dir_285aa40730b2df8f5cd48498b8604c92.html  dir_285aa40730b2df8f5cd48498b8604c92.js  dir_285aa40730b2df8f5cd48498b8604c92_dep.map  dir_285aa40730b2df8f5cd48498b8604c92_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen-custom.css  doxygen.css  doxygen_crawl.html  files.html  globals.html  globals_defs.html  globals_eval.html  globals_func.html  graph_legend.html  index.html  menudata.js  navbar.css  navbar.js  navtreedata.js  navtreeindex0.js  version_8h.html  version_8h.js  version_8h__incl.map  version_8h__incl.md5  version_8h_source.html
dev/html/search/: all_0.js  all_1.js  all_4.js  defines_0.js  enumvalues_0.js  functions_0.js  pages_1.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  searchdata.js
docs/: INTERFACES.md
include/liara/: version.h
tests/: CMakeLists.txt  test_version_c.c  test_version_cxx.cpp
tests/rust/: Cargo.toml  build.rs  wrapper.c  wrapper.h
tests/rust/src/: main.rs
tests/zig/: test.zig
